--- a/VBAFunctions.html
+++ b/VBAFunctions.html
@@ -197,7 +197,7 @@
 
     <img class="pic2-about" src="files/images/example2.jpg">
 
-    <p class="author">Tran Tuan Lam - 2024</p>
+    <p class="author">Tran Tuan Lam - October 2024</p>
     <script src="script.js"></script>
   </body>
 </html>
