--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
           <p>You can download the Excel file with the VBA functions here:</p>
         </div>
-        <a href="files/mcExample-01.xlsx" download  id="excel" class="excel">mcExample-01.xlsm</a>
+        <a href="files/mcExample-01.xlsm" download  id="excel" class="excel">mcExample-01.xlsm</a>
         <h3>Overview</h3>
         <p>
           This Excel file demonstrates how to: 
