--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1 class="title">Minimum Curvature Method</h1>
       <div id="main" class="main">
         <div>
-          <p>You can download the Excel file with the VBA functions here:</p>
+          <p>You can <span class="hightlight1">download</span> the Excel file with the VBA functions here:</p>
         </div>
         <a href="files/mcExample-01.xlsm" download  id="excel" class="excel">mcExample-01.xlsm</a>
         <h3>Overview</h3>
@@ -39,7 +39,7 @@
         </p>
         <img class="pic1" src="files/images/example table.jpg">
 
-        <p><b>This Excel file provided as is, used as your own risk!</b></p>
+        <p class="author"><b>This Excel file provided as is, used as your own risk!</b></p>
       </div>
     </div>
     <p class="author">Tran Tuan Lam - October 2024</p>
