Increase Image size to 80%
For better viewing in phone

--- a/VBAFunctions.html
+++ b/VBAFunctions.html
@@ -17,8 +17,8 @@
       </div>
     </div>
     <p>
-      The minimum curvature method is used to write VBA code in excel .xlsm file for survey calculation. <br> <br>
-      User-defined functions starting with prefix "mc" are intended to be used in excel sheets. <br> <br>
+      VBA code, written in an Excel .xlsm file, employs the Minimum Curvature method for survey calculations. <br> <br>
+      User-defined functions beginning with the "mc" prefix are designed for use in Excel spreadsheets. <br> <br>
       Here are the functions included in the Excel file.
     </p>
     <div>
@@ -191,7 +191,7 @@
       </tr>
     </table>
     <br><br>
-    <p>
+    <p style="font-size: 1.2rem;">
       <b>Other examples of using interpolation functions:</b>
     </p>
 
