--- a/VBAFunctions.html
+++ b/VBAFunctions.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <p>
-      VBA code, written in an Excel .xlsm file, employs the Minimum Curvature method for survey calculations. <br> <br>
+      VBA code, written in an Excel .xlsm file, employs the Minimum Curvature Method for survey calculations. <br> <br>
       User-defined functions beginning with the "mc" prefix are designed for use in Excel spreadsheets. <br> <br>
       Here are the functions included in the Excel file.
     </p>
@@ -25,7 +25,7 @@
       
       <p style="font-size: 1.5rem;">
         <b>
-        Minimum curvature method Functions        
+        Minimum Curvature Method Functions        
       </b>
       </p>  
         
